--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,25 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
+boolean signConfigExists = project.hasProperty("keystoreFile") && project.hasProperty("keystorePassword") && project.hasProperty("keystoreAlias") && project.hasProperty("keystoreAliasPassword")
+
 android {
-    compileSdkVersion 28
+    if (signConfigExists) {
+        signingConfigs {
+            release {
+                storeFile file(project.property("keystoreFile"))
+                storePassword project.property("keystorePassword")
+                keyAlias project.property("keystoreAlias")
+                keyPassword project.property("keystoreAliasPassword")
+            }
+        }
+    }
+
+    compileSdkVersion 30
     defaultConfig {
         applicationId "android.jonas.fakestandby"
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 7
         versionName '1.3.1'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
