--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation 'com.github.AppIntro:AppIntro:6.0.0'
+    //implementation 'com.github.AppIntro:AppIntro:6.0.0'
 
     adImplementation 'com.google.firebase:firebase-analytics:17.6.0'
     adImplementation 'com.google.android.gms:play-services-ads:19.4.0'
