Fix for signing code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
                 checkReleaseBuilds false
                 abortOnError false
             }
+            
+            if(signConfigExists) {
+                signingConfig signingConfigs.release
+            }
         }
         debug {
             signingConfig signingConfigs.debug
